<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SeqAirTreatment" Id="{731b4091-7df3-4760-abac-91eb803a3c72}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_SeqAirTreatment :
(
	IDLE := 0, //Do Nothing
	START := 1, //First step executed after reset sequence
	BUSY := 1000, //Module busy
	
	PRESSURIZE,
	FLUSHING,
	EQUALIZE,
	
	STOP,
	READY := 10000, //Module is ready, only executed once
	ERROR := 20000 // Module has an error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>