<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SettingsAirTreatment" Id="{06fc4816-030f-4763-8a01-113573740184}">
    <Declaration><![CDATA[TYPE ST_SettingsAirTreatment :
STRUCT
	//Param file
	fPressurizingPress : LREAL; //[Pa]
	fDockingPress : LREAL; //[Pa]
	fFlushingPress : LREAL; //[Pa]
	tFlushingTime : TIME; //[s]
	fEqualizingPress : LREAL; //[Pa]
	fPressureRange : LREAL; //[Pa]
	
	//Init Config
	fKp : LREAL; //Proportional gain Kp (P)
    fTn : LREAL; //Integral gain Tn (I) [s]
    fTv : LREAL; //Derivative gain Tv (D-T1) [s]
    fTd : LREAL; //Derivative damping time Td (D-T1) [s]
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>